<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LiveDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/liveDataConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#283F5A">

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:text="@string/send"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.209"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_fields"
            android:ems="10"
            android:hint="@string/add_live_data"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:paddingStart="20dp"
            app:layout_constraintBottom_toTopOf="@+id/send_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:text="@string/back_to_login_screen"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toEndOf="@+id/send_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.218" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/write_something_and_press_send"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>