<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F9FA">

        <TextView
            android:id="@+id/dont_have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="6sp"
            android:text="@string/dont_have_an_account"
            android:textColor="#78909C"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/create_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/dont_have_an_account_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="#78909C"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/img_pw"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:foregroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:paddingStart="22dp"
            android:textColorHint="#37474F"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/forgot_password_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="325dp"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/img_id"
            android:drawablePadding="15dp"
            android:ems="10"
            android:fontFamily="@font/poppins_medium"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:paddingStart="20dp"
            android:textColorHint="#37474F"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/password_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/dance_image"
            android:layout_width="325dp"
            android:layout_height="325dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/img_dance"
            app:layout_constraintBottom_toTopOf="@+id/username_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="6dp"
            android:text="@string/create"
            android:textColor="@color/cardview_dark_background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/dont_have_an_account_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>